New Maps, Atmosphere, etc.

--- a/resources/fuelrats/client/html/scoreboard/index.html
+++ b/resources/fuelrats/client/html/scoreboard/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Discord Auth by Stuyk</title>
+        <title>Scoreboard</title>
         <link rel="stylesheet/less" type="text/css" href="style.less" />
     </head>
     <body>
